fixed alignment issues

--- a/static/css/Programs.css
+++ b/static/css/Programs.css
@@ -16,6 +16,11 @@
     width: 1550px;
 }
 
+.collapsible1 >h4 {
+text-align:left;
+margin-left:100px;
+}
+
 .clickableLvl {
     background-color: #777;
     color: white;
